Fixed spacing

--- a/src/main/webapp/resources/shoppingcart.css
+++ b/src/main/webapp/resources/shoppingcart.css
@@ -31,10 +31,12 @@ h1 {
 
 h2 {
 	font-size: 3.5rem;
+	margin-bottom: .3rem;
 }
 
 h3 {
 	font-size: 3rem;
+	margin-bottom:.2rem;
 }
 
 a {
